src/test/java/flipkart_may15/TC002.java
package flipkart_may15;

import org.testng.annotations.Test;

public class TC002 {

	@Test
	public void testCase002() {
		//error
	}
}
